#4.0.1
 -- small bugfix for using makeNA in kNN
#4.0.0
 -- new pacakge VIMGUI contains all GUI functions
 -- vignettes moved to VIMGUI
 -- new imputation function regressionImp
 -- roxygen style comments -> help files